--- a/apps/report/tsconfig.json
+++ b/apps/report/tsconfig.json
@@ -22,6 +22,8 @@
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictPropertyInitialization": false,
+    "noEmptyFunctions": false
   }
 }
