--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "@angular/compiler": "^12.2.0",
     "@angular/core": "^12.2.0",
     "@angular/forms": "^12.2.0",
+    "@angular/localize": "^12.2.0",
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngrx/component": "^12.5.1",
     "@nrwl/angular": "13.1.3",
+    "bootstrap": "^4.5.0",
     "format": "^0.2.2",
     "primeicons": "^5.0.0",
     "primeng": "^12.2.2",
